==> zephyrproject-rtos/zephyr/drivers/serial/uart_gd32.c <==
#define DT_DRV_COMPAT gigadevice_gd32_uart
#include <kernel.h>
#include <arch/cpu.h>
#include <sys/__assert.h>
#include <soc.h>
#include <init.h>
#include <drivers/uart.h>
#include <drivers/pinmux.h>
#include <drivers/clock_control.h>
#include <linker/sections.h>
#include "gd32vf103_usart.h"
#include "gd32vf103_gpio.h"
#include "gigadevice_gd32_dt.h"
#include <linker/sections.h>
#include <logging/log.h>
#define DEV_CFG(dev) \
	((const struct uart_gd32_config *const)(dev)->config)
#define DEV_DATA(dev) \
	((struct uart_gd32_data *const)(dev)->data)
#define DEV_REGS(dev) \
	(DEV_CFG(dev)->uconf.regs)
#define CLT2_HWFC(regval)             (BITS(8, 9) & ((uint32_t)(regval) << 8))
#define USART_HWFC_NONE               CLT2_HWFC(0)                      /*!< HWFC disable */
#define USART_HWFC_RTS                CLT2_HWFC(1)                      /*!< RTS enable */
#define USART_HWFC_CTS                CLT2_HWFC(2)                      /*!< CTS enable */
#define USART_HWFC_RTSCTS             CLT2_HWFC(3)                      /*!< RTS&CTS enable */
#define USART_CTL2_HWFC               BITS(8, 9)                        /*!< RTS&CTS enable */

static int uart_gd32_configure(const struct device *dev,
			       const struct uart_config *cfg)
{
	struct uart_gd32_data *data = DEV_DATA(dev);
	uint32_t regs = DEV_REGS(dev);
	const uint32_t parity = uart_gd32_cfg2ll_parity(cfg->parity);
	const uint32_t stopbits = uart_gd32_cfg2ll_stopbits(cfg->stop_bits);
	const uint32_t databits = uart_gd32_cfg2ll_databits(cfg->data_bits);

	const uint32_t flowctrl = uart_gd32_cfg2ll_hwctrl(cfg->flow_ctrl);

	/* Hardware doesn't support mark or space parity */
	if ((cfg->parity == UART_CFG_PARITY_MARK) ||
	    (cfg->parity == UART_CFG_PARITY_SPACE)) {
		return -ENOTSUP;
	}

	/* Driver does not supports parity + 9 databits */
	if ((cfg->parity != UART_CFG_PARITY_NONE) &&
	    (cfg->data_bits == UART_CFG_DATA_BITS_9)) {
		return -ENOTSUP;
	}

	if (cfg->stop_bits == UART_CFG_STOP_BITS_0_5) {
		return -ENOTSUP;
	}

	if (cfg->stop_bits == UART_CFG_STOP_BITS_1_5) {
		return -ENOTSUP;
	}

	/* Driver doesn't support 5 or 6 databits and potentially 7 or 9 */
	if ((cfg->data_bits == UART_CFG_DATA_BITS_5) ||
	    (cfg->data_bits == UART_CFG_DATA_BITS_6)
#ifndef USART_WL_7BIT
	    || (cfg->data_bits == UART_CFG_DATA_BITS_7)
#endif /* USART_WL_7BIT */
	    || (cfg->data_bits == UART_CFG_DATA_BITS_9)) {
		return -ENOTSUP;
	}

	/* Driver supports only RTS CTS flow control */
	if (cfg->flow_ctrl != UART_CFG_FLOW_CTRL_NONE) {
		if (!IS_UART_HWFLOW_INSTANCE(regs) ||
		    cfg->flow_ctrl != UART_CFG_FLOW_CTRL_RTS_CTS) {
			return -ENOTSUP;
		}
	}

	usart_disable(regs);

	if (parity != uart_gd32_get_parity(dev)) {
		uart_gd32_set_parity(dev, parity);
	}

	if (stopbits != uart_gd32_get_stopbits(dev)) {
		uart_gd32_set_stopbits(dev, stopbits);
	}

	if (databits != uart_gd32_get_databits(dev)) {
		uart_gd32_set_databits(dev, databits);
	}

	if (flowctrl != uart_gd32_get_hwctrl(dev)) {
		uart_gd32_set_hwctrl(dev, flowctrl);
	}

	if (cfg->baudrate != data->baud_rate) {
		uart_gd32_set_baudrate(dev, cfg->baudrate);
		data->baud_rate = cfg->baudrate;
	}

	usart_enable(regs);
	return 0;
}

static int uart_gd32_config_get(const struct device *dev,
				struct uart_config *cfg)
{
	struct uart_gd32_data *data = DEV_DATA(dev);

	cfg->baudrate = data->baud_rate;
	cfg->parity = uart_gd32_ll2cfg_parity(uart_gd32_get_parity(dev));
	cfg->stop_bits = uart_gd32_ll2cfg_stopbits(
		uart_gd32_get_stopbits(dev));
	cfg->data_bits = uart_gd32_ll2cfg_databits(
		uart_gd32_get_databits(dev));
	cfg->flow_ctrl = uart_gd32_ll2cfg_hwctrl(
		uart_gd32_get_hwctrl(dev));
	return 0;
}

static int uart_gd32_poll_in(const struct device *dev, unsigned char *c)
{
	uint32_t regs = DEV_REGS(dev);

	/* Clear overrun error flag */
	if (usart_flag_get(regs, USART_FLAG_ORERR)) {
		usart_flag_clear(regs, USART_FLAG_ORERR);
	}

	if (!usart_flag_get(regs, USART_FLAG_RBNE)) {
		return -1;
	}

	*c = (unsigned char)usart_data_receive(regs);

	return 0;
}

static void uart_gd32_poll_out(const struct device *dev,
			       unsigned char c)
{
	uint32_t regs = DEV_REGS(dev);

	/* Wait for TXE flag to be raised */
	while (!usart_flag_get(regs, USART_FLAG_TBE)) {
	}

	usart_flag_clear(regs, USART_FLAG_TC);

	usart_data_transmit(regs, (uint8_t) c);
}

static int uart_gd32_err_check(const struct device *dev)
{
	uint32_t regs = DEV_REGS(dev);
	uint32_t err = 0U;

	/* Check for errors, but don't clear them here.
	 * Some SoC clear all error flags when at least
	 * one is cleared. (e.g. F4X, F1X, and F2X)
	 */
	if (usart_flag_get(regs, USART_FLAG_ORERR)) {
		err |= UART_ERROR_OVERRUN;
	}

	if (usart_flag_get(regs, USART_FLAG_PERR)) {
		err |= UART_ERROR_PARITY;
	}

	if (usart_flag_get(regs, USART_FLAG_FERR)) {
		err |= UART_ERROR_FRAMING;
	}

	if (err & UART_ERROR_OVERRUN) {
		usart_flag_clear(regs, USART_FLAG_ORERR);
	}

	if (err & UART_ERROR_PARITY) {
		usart_flag_clear(regs, USART_FLAG_PERR);
	}

	if (err & UART_ERROR_FRAMING) {
		usart_flag_clear(regs, USART_FLAG_FERR);
	}

	/* Clear noise error as well,
	 * it is not represented by the errors enum
	 */
	usart_flag_clear(regs, USART_FLAG_NERR);

	return err;
}

static int uart_gd32_fifo_fill(const struct device *dev,
			       const uint8_t *tx_data,
			       int size)
{
	uint32_t regs = DEV_REGS(dev);
	uint8_t num_tx = 0U;

	while ((size - num_tx > 0) &&
	       usart_interrupt_flag_get(regs, USART_INT_FLAG_TBE)) {
		/* TBE flag will be cleared with byte write to DATA register */

		/* Send a character (8bit , parity none) */
		usart_data_transmit(regs, tx_data[num_tx++]);
	}

	return num_tx;
}

static int uart_gd32_fifo_read(const struct device *dev, uint8_t *rx_data,
			       const int size)
{
	uint32_t regs = DEV_REGS(dev);
	uint8_t num_rx = 0U;

	while ((size - num_rx > 0) &&
	       usart_interrupt_flag_get(regs, USART_INT_FLAG_RBNE)) {
		/* RBNE flag will be cleared upon read from DATA register */

		/* Receive a character (8bit , parity none) */
		rx_data[num_rx++] = usart_data_receive(regs);

		/* Clear overrun error flag */
		if (usart_interrupt_flag_get(regs, USART_INT_FLAG_ERR_ORERR)) {
			usart_interrupt_flag_clear(regs, USART_INT_FLAG_ERR_ORERR);
		}
	}

	return num_rx;
}

static void uart_gd32_irq_tx_enable(const struct device *dev)
{
	uint32_t regs = DEV_REGS(dev);

	usart_interrupt_enable(regs, USART_INT_TBE);
}

static void uart_gd32_irq_tx_disable(const struct device *dev)
{
	uint32_t regs = DEV_REGS(dev);

	usart_interrupt_disable(regs, USART_INT_TBE);
}

static int uart_gd32_irq_tx_ready(const struct device *dev)
{
	uint32_t regs = DEV_REGS(dev);

	return usart_interrupt_flag_get(regs, USART_INT_FLAG_TBE);
}

static int uart_gd32_irq_tx_complete(const struct device *dev)
{
	uint32_t regs = DEV_REGS(dev);

	return usart_interrupt_flag_get(regs, USART_INT_FLAG_TC);
}

static void uart_gd32_irq_rx_enable(const struct device *dev)
{
	uint32_t regs = DEV_REGS(dev);

	usart_interrupt_enable(regs, USART_INT_RBNE);
}

static void uart_gd32_irq_rx_disable(const struct device *dev)
{
	uint32_t regs = DEV_REGS(dev);

	usart_interrupt_disable(regs, USART_INT_RBNE);
}

static int uart_gd32_irq_rx_ready(const struct device *dev)
{
	uint32_t regs = DEV_REGS(dev);

	return usart_interrupt_flag_get(regs, USART_INT_FLAG_RBNE);
}

static void uart_gd32_irq_err_enable(const struct device *dev)
{
	uint32_t regs = DEV_REGS(dev);

	/* Enable Error interruptions */
	usart_interrupt_enable(regs, USART_INT_ERR);
	/* Enable Line break detection */
	if (IS_UART_LIN_INSTANCE(regs)) {
		usart_interrupt_enable(regs, USART_INT_LBD);
	}
	/* Enable parity error interruption */
	usart_interrupt_enable(regs, USART_INT_PERR);
}

static void uart_gd32_irq_err_disable(const struct device *dev)
{
	uint32_t regs = DEV_REGS(dev);

	/* Disable Error interruptions */
	usart_interrupt_disable(regs, USART_INT_ERR);
	/* Disable Line break detection */
	if (IS_UART_LIN_INSTANCE(regs)) {
		usart_interrupt_disable(regs, USART_INT_LBD);
	}
	/* Disable parity error interruption */
	usart_interrupt_disable(regs, USART_INT_PERR);
}

static int uart_gd32_irq_is_pending(const struct device *dev)
{
	uint32_t regs = DEV_REGS(dev);

	return ((usart_interrupt_flag_enabled(regs, USART_INT_FLAG_RBNE) &&
		 usart_interrupt_flag_get(regs, USART_INT_FLAG_RBNE)) ||
		(usart_interrupt_flag_enabled(regs, USART_INT_FLAG_TC) &&
		 usart_interrupt_flag_get(regs, USART_INT_FLAG_TC)));
}

static void uart_gd32_irq_callback_set(const struct device *dev,
				       uart_irq_callback_user_data_t cb,
				       void *cb_data)
{
	struct uart_gd32_data *data = DEV_DATA(dev);

	data->user_cb = cb;
	data->user_data = cb_data;
}

static void uart_gd32_isr(const struct device *dev)
{
	struct uart_gd32_data *data = DEV_DATA(dev);

#ifdef CONFIG_UART_INTERRUPT_DRIVEN
	if (data->user_cb) {
		data->user_cb(dev, data->user_data);
	}
#endif /* CONFIG_UART_INTERRUPT_DRIVEN */
}
